<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#fff"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@android:color/transparent"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:src="@drawable/logo32"
                android:layout_marginTop="5dp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="#fff"/>
            <LinearLayout
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="#000"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:text="TurMed"
                    android:textSize="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="40dp"
        >
--------------- encabezado---------------
        <TextView
            android:id="@+id/tituloiniciosesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/Login"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textColor="#000">

        </TextView>
--------- usuario btn---------------------------
        <TextView
            android:id="@+id/txtusuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:text="@string/Username"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textColor="#000">
        </TextView>
        <EditText
            android:id="@+id/edtusuario"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:ems="20"
            android:inputType="textEmailAddress"
            android:ellipsize="start"
            android:background="@drawable/edittextstle"
            android:textColor="#000">
        </EditText>
            ------------------------contrasena  btn------------
        <TextView
            android:id="@+id/txtcontrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="40dp"
            android:text="@string/Password"
            android:textSize="15dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textColor="#000">

        </TextView>
        <EditText
            android:id="@+id/edtcontrasena"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:ellipsize="start"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:ems="20"
            android:inputType="textPassword"
            android:background="@drawable/edittextstle"
            android:textColor="#000">

        </EditText>
---------------------- olvidaste contrasena btn----------------
        <Button
            android:id="@+id/btnolvidatecontra"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:text="@string/Forgotassword"
            android:textAllCaps="false"
            android:textColor="@color/fogortpassword"
            android:textStyle="normal"
            android:typeface="normal" />
        ------------------- inicio sesion btn-------------------------
        <Button
            android:id="@+id/btniniciosesion"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonLogin"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="85dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            android:background="#80BEBEBE"
            android:textColor="#000">
        </Button>
        ---------------------------no tienes cuenta--------------------
        <Button
            android:id="@+id/btncuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/youdonthaveanaccountregisterhere"
            android:textAllCaps="false"
            android:background="@null"
            android:textStyle="normal"
            android:typeface="normal"
            android:textColor="@color/fogortpassword"
            android:layout_marginTop="100dp">

        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>