<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro_Activity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="#fff"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:src="@drawable/logo32"
                android:layout_marginTop="5dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#fff"
                android:layout_gravity="start"/>
            <LinearLayout
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="#000"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:text="TurMed"
                    android:textSize="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"/>


            </LinearLayout>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="38dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tituloreistr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/registry"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textColor="#000">

        </TextView>

        --------------------------NOMBRE---------------------------
        <TextView
            android:id="@+id/txtnombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="150dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textColor="#000">

        </TextView>

        <EditText
            android:id="@+id/edtnombre"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittextstle"
            android:ellipsize="start"
            android:ems="20"
            android:gravity="center_vertical"
            android:inputType="text|textPersonName"
            android:textColor="#000">

        </EditText>
        --------------------------APELLIDOS---------------------------
        <TextView
            android:id="@+id/txtapellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="150dp"
            android:text="@string/surnames"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textColor="#000">

        </TextView>

        <EditText
            android:id="@+id/edtapellidos"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittextstle"
            android:ellipsize="start"
            android:ems="20"
            android:gravity="center_vertical"
            android:inputType="text|textPersonName"
            android:textColor="#000">

        </EditText>
        --------------------------EMAIL---------------------------
        <TextView
            android:id="@+id/txtemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="102dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textColor="#000">

        </TextView>

        <EditText
            android:id="@+id/edtemail"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittextstle"
            android:ellipsize="start"
            android:ems="20"
            android:gravity="center_vertical"
           android:inputType="textEmailAddress"
            android:textColor="#000">

        </EditText>
        --------------------------TELEFONO---------------------------
        <TextView
            android:id="@+id/txttelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="125dp"
            android:text="@string/phonenumber"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textColor="#000">

        </TextView>

        <EditText
            android:id="@+id/edttelefono"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittextstle"
            android:ellipsize="start"
            android:ems="20"
            android:gravity="center_vertical"
            android:inputType="phone"
            android:textColor="#000">

        </EditText>
        --------------------------CONTRASENA---------------------------
        <TextView
            android:id="@+id/txtcontrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="117dp"
            android:text="@string/Password"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textColor="#000">

        </TextView>

        <EditText
            android:id="@+id/edtcontrasena"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittextstle"
            android:ellipsize="start"
            android:ems="20"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:textColor="#000"/>
        --------------------------VER.CONTRASENA---------------------------
        <TextView
            android:id="@+id/txtvcontrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="105dp"
            android:text="@string/confirmpassword"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textColor="#000">

        </TextView>

        <EditText
            android:id="@+id/edtvcontrasena"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittextstle"
            android:ellipsize="start"
            android:ems="20"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:textColor="#000"/>
        ---------------------CHECKBOX------------------------
        <CheckBox
            android:id="@+id/terminosycondiciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termsandconditions"
            android:layout_gravity="center"
            android:textColor="#000"
            >

        </CheckBox>
        <Button
            android:id="@+id/btnregistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toregister"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textAllCaps="false"
            android:textColor="#000"
            android:background="#80BEBEBE">

        </Button>
    </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>