<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".navegacion.Configuracion.Horarios">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Configuraciones"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/set_your_hours_of_operation"
                android:textColor="#000" />
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">
                <!--TODO:DOMINGO-->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/sunday"
                        android:textColor="@color/colorLyrics"
                        android:textSize="15dp"/>
                    <Spinner
                        android:id="@+id/spdomingoAM"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="a"
                        android:textColor="@color/colorLyrics"
                        android:textSize="15dp"/>
                    <Spinner
                        android:id="@+id/spdomingoPM"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        />
                </TableRow>
                <!--TODO:LUNES-->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/monday"
                        android:textColor="@color/colorLyrics"
                        android:textSize="15dp"/>
                    <Spinner
                        android:id="@+id/splunesAM"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="a"
                        android:textSize="15dp"
                        android:textColor="@color/colorLyrics"/>
                    <Spinner
                        android:id="@+id/splunesPM"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        />
                </TableRow>
                <!--TODO:MARTES-->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/Tuesday"
                        android:textSize="15dp"
                        android:textColor="@color/colorLyrics"/>
                    <Spinner
                        android:id="@+id/spmartesAM"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="a"
                        android:textSize="15dp"
                        android:textColor="@color/colorLyrics"/>
                    <Spinner
                        android:id="@+id/spmartesPM"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        />
                </TableRow>
                <!--TODO:MIERCOLES-->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/wednesday"
                        android:textSize="15dp"
                        android:textColor="@color/colorLyrics"/>
                    <Spinner
                        android:id="@+id/spmiercolesAM"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="a"
                        android:textSize="15dp"
                        android:textColor="@color/colorLyrics"/>
                    <Spinner
                        android:id="@+id/spmiercolesPM"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        />
                </TableRow>
                <!--TODO:JUEVES-->

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/thursday"
                        android:textSize="15dp"
                        android:textColor="@color/colorLyrics"/>
                    <Spinner
                        android:id="@+id/spjuevesAM"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="a"
                        android:textSize="15dp"
                        android:textColor="@color/colorLyrics"/>
                    <Spinner
                        android:id="@+id/spjuevesPM"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        />
                </TableRow>
                <!--TODO:VIERNES-->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/friday"
                        android:textSize="15dp"
                        android:textColor="@color/colorLyrics"/>
                    <Spinner
                        android:id="@+id/spviernesAM"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="a"
                        android:textSize="15dp"
                        android:textColor="@color/colorLyrics"/>
                    <Spinner
                        android:id="@+id/spviernesPM"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        />
                </TableRow>
                <!--TODO:SABADO-->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/saturday"
                        android:textSize="15dp"
                        android:textColor="@color/colorLyrics"/>
                    <Spinner
                        android:id="@+id/spsabdAM"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="a"
                        android:textSize="15dp"
                        android:textColor="@color/colorLyrics"/>
                    <Spinner
                        android:id="@+id/spsabadoPM"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        />
                </TableRow>
            </TableLayout>
            <Button
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textAllCaps="false"
                android:layout_marginLeft="115dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="110dp"/>
        </LinearLayout>


</RelativeLayout>